# watch-duty-pwa

./: .gitattributes  .gitignore  .replit  Dockerfile  README.md  app.py  generate_alert_sound.py  pyproject.toml  replit.md  requirements.txt
static/: app.js  manifest.json  style.css  sw.js
templates/: index.html
