[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.14.2",
    "faster-whisper>=1.2.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "openai>=2.3.0",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "speechrecognition>=3.14.3",
    "trafilatura>=2.0.0",
]
